syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.exercise.decomposition";
option java_outer_classname = "DecompositionProto";
option objc_class_prefix = "HLW";

// the service definition
service DecompositionService {
    rpc getDecomposition(DecompositionRequest) returns (stream DecompositionResponse) {};
}

// the request message
message DecompositionRequest {
    int32 number = 1;
}

// the response message
message DecompositionResponse {
    int32 prime = 1;
}